# opentrons-drivers

./: .gitignore  .taplo.toml  LICENSE  Makefile  README.md  build_wheel.py  dev-requirements.txt  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
control/: pyproject.toml
control/opentrons_control/: backend.example.json  docker-compose.yml
control/opentrons_control/backend/: Dockerfile
control/opentrons_control/backend/app/: api.py  bootstrap.py  generator.py  global_variables.py  launcher.py  main.py  protocol_model.py  run.py  security.py  sessions.py  simulator.py  update.py  vault.py  versioning.py
control/opentrons_control/backend/app/db/: db_session.py  runner.py
control/opentrons_control/backend/app/db/schema/: 01_schema.sql
control/opentrons_control/backend/app/db/sql/action_plans/: delete_family.sql  delete_version.sql  get.sql  insert.sql  latest_for_family.sql  list_mine.sql  list_others.sql  versions.sql
control/opentrons_control/backend/app/db/sql/deck_configs/: all_with_config.sql  delete_family.sql  delete_version.sql  get.sql  insert.sql  latest_for_family.sql  list_mine.sql  list_others.sql  versions.sql
control/opentrons_control/backend/app/db/sql/drafts/: delete.sql  get.sql  upsert.sql
control/opentrons_control/backend/app/db/sql/invites/: consume.sql  create.sql  get_unused.sql  list.sql  revoke.sql
control/opentrons_control/backend/app/db/sql/labware/: delete.sql  get.sql  list.sql  upsert.sql
control/opentrons_control/backend/app/db/sql/methods/: delete.sql  list.sql  upsert.sql
control/opentrons_control/backend/app/db/sql/permissions/: grant.sql  has.sql  list_for_user.sql  revoke.sql
control/opentrons_control/backend/app/db/sql/robots/: delete.sql  list_enabled.sql  upsert.sql
control/opentrons_control/backend/app/db/sql/secrets/: get.sql  list.sql  put.sql
control/opentrons_control/backend/app/db/sql/standard_units/: delete.sql  get.sql  insert.sql  list.sql
control/opentrons_control/backend/app/db/sql/users/: count_active_admins.sql  get_by_name.sql  get_full.sql  insert.sql  list.sql  set_password.sql  soft_delete.sql
control/opentrons_control/backend/app/routers/: admin.py  auth.py  deck.py  draft.py  method.py  plan.py  user.py
control/opentrons_control/backend/app/scripts/: seed_admin.py  store_secret.py
control/opentrons_control/backend/app/settings/: config.py  global_variables.py
control/opentrons_control/frontend/: Dockerfile
control/opentrons_control/frontend/app/: deps.py  main.py
control/opentrons_control/frontend/app/templates/: base.html
control/opentrons_control/frontend/app/templates/admin/: _tabs.html  dashboard.html  methods.html  updates.html  users.html
control/opentrons_control/frontend/app/templates/auth/: login.html  register.html
control/opentrons_control/frontend/app/templates/user/: _tabs.html  actions.html  configs.html  dashboard.html  deck.html  error.html  library.html
control/opentrons_control/maintain/: README.md  build_wheel.py  config.py  deploy.example.toml  deploy.toml  update_robots.py
control/opentrons_control/maintainer/: Dockerfile
control/opentrons_control/maintainer/app/: __init__.py  backend_client.py  builder.py  config.py  git.py  main.py  source.py  store.py
control/opentrons_control/proxy/: Dockerfile
control/opentrons_control/proxy/app/: main.py
control/opentrons_control/scripts/: launch.py  launch.sh  setup_env.py
drivers/: pyproject.toml
drivers/opentrons_drivers/: __init__.py
drivers/opentrons_drivers/agent/: __init__.py  agent_main.py
drivers/opentrons_drivers/common/: __init__.py  actions.py  base_opentrons.py  methods.py
opentrons_control/: docker-compose.yml  readme.md
opentrons_control/backend/: Dockerfile
opentrons_control/backend/app/: api.py  artifact.py  bootstrap.py  launcher.py  main.py  manager.py  ot_client.py  robot_sessions.py  runner.py  security.py  sessions.py  ssh_handler.py  states.py
opentrons_control/backend/app/db/sql/robots/: list_all.sql
opentrons_control/backend/app/db/sql/users/: get_by_id.sql
opentrons_control/backend/app/routers/: admin.py  auth.py
opentrons_control/backend/app/settings/: custom_types.py  deps.py
opentrons_control/backend/app/templates/admin/: dashboard.html
opentrons_control/backend/app/templates/auth/: login.html
opentrons_control/db/: schema.sql
opentrons_control/frontend/: Dockerfile  app.js  index.html  nginx.conf
opentrons_control/frontend/app/templates/admin/: dashboard.html
opentrons_control/maintain/app/: build_wheel.py
opentrons_control/proxy/app/: main.py
opentrons_drivers/agent/: agent_main.py  base_agent.py  http_handler.py
opentrons_drivers/agents/: agent_main.py  base_agent.py
opentrons_drivers/common/: actions.py  base_agent.py  base_opentrons.py  custom_types.py  helpers.py  methods.py
opentrons_drivers/protocol/: __init__.py  base_protocol.py
plates/: standard_plate.json  stock_plate.json
postbox/: task.json
protocols/alexx/test/: agent_config.json  base_config.json
tests/: test_opentrons_drivers.py
