[project]
name = "opentrons_drivers"
dynamic = ["version"]
description = "Agents and protocols for running on opentrons hardware"
authors = [
    {name = "Dan Davies", email = "d.w.davies@imperial.ac.uk"},
    {name = "Alex Ostudin", email = "ao1423@ic.ac.uk"}
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy", "pip-tools", "pre-commit", "pytest", "pytest-cov", "pytest-mock"]


[tool.mypy]
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv/", "docs/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-v -p no:warnings --cov=opentrons_drivers --cov-branch --cov-report=html --cov-report=xml --doctest-modules --ignore=opentrons_drivers/__main__.py --ignore=docs/"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["htmlcov"] # Exclude the coverage report file from setuptools package finder
