# Workspace root.
#
# This repository is a monorepo containing two independently-installable
# packages:
#
#   drivers/   -> opentrons_drivers   (runs ON the robots)
#   control/   -> opentrons_control   (runs on the control machine)
#
# This root file is NOT a distributable package. It exists only to hold
# shared developer-tooling configuration (ruff, mypy, pytest) and the dev
# dependency set that `pip-compile` turns into dev-requirements.txt.
[project]
name = "opentrons-workspace"
version = "0"
description = "Dev-tooling workspace for the opentrons_drivers and opentrons_control packages"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pydantic",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# The root is a tooling shell; it ships no importable packages.
py-modules = []

[tool.mypy]
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["venv/", "docs/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "opentrons_control.backend.app.api"
disallow_any_explicit = false

[tool.pytest.ini_options]
# Tests live with the drivers package; pointing pytest at drivers/ keeps
# --doctest-modules scanning the opentrons_drivers source as before.
testpaths = ["drivers"]
addopts = "-v -p no:warnings --cov=opentrons_drivers --cov-branch --cov-report=html --cov-report=xml --doctest-modules --ignore=docs/"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]
